Error Mitigation/MagiCoder/Data/javax_xml_soap/javax_xml_soapOutputResult.txt
Sample: MessageFactory_1
----------------------------------------------------------------
output:
./Data/javax_xml_soap/javaFiles/MessageFactory_1.java:1: error: package javax.xml.soap does not exist
import javax.xml.soap.MessageFactory;
                     ^
./Data/javax_xml_soap/javaFiles/MessageFactory_1.java:2: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPException;
                     ^
./Data/javax_xml_soap/javaFiles/MessageFactory_1.java:3: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPMessage;
                     ^
./Data/javax_xml_soap/javaFiles/MessageFactory_1.java:9: error: cannot find symbol
            MessageFactory factory = MessageFactory.newInstance();
            ^
  symbol:   class MessageFactory
  location: class MessageFactory_1
./Data/javax_xml_soap/javaFiles/MessageFactory_1.java:9: error: cannot find symbol
            MessageFactory factory = MessageFactory.newInstance();
                                     ^
  symbol:   variable MessageFactory
  location: class MessageFactory_1
./Data/javax_xml_soap/javaFiles/MessageFactory_1.java:12: error: cannot find symbol
            SOAPMessage message = factory.createMessage();
            ^
  symbol:   class SOAPMessage
  location: class MessageFactory_1
./Data/javax_xml_soap/javaFiles/MessageFactory_1.java:16: error: cannot find symbol
        } catch (SOAPException e) {
                 ^
  symbol:   class SOAPException
  location: class MessageFactory_1
7 errors


================================================================

Sample: SOAPConnectionFactory_1
----------------------------------------------------------------
output:
./Data/javax_xml_soap/javaFiles/SOAPConnectionFactory_1.java:1: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPConnection;
                     ^
./Data/javax_xml_soap/javaFiles/SOAPConnectionFactory_1.java:2: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPConnectionFactory;
                     ^
./Data/javax_xml_soap/javaFiles/SOAPConnectionFactory_1.java:3: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPException;
                     ^
./Data/javax_xml_soap/javaFiles/SOAPConnectionFactory_1.java:8: error: cannot find symbol
            SOAPConnectionFactory factory = SOAPConnectionFactory.newInstance();
            ^
  symbol:   class SOAPConnectionFactory
  location: class SOAPConnectionFactory_1
./Data/javax_xml_soap/javaFiles/SOAPConnectionFactory_1.java:8: error: cannot find symbol
            SOAPConnectionFactory factory = SOAPConnectionFactory.newInstance();
                                            ^
  symbol:   variable SOAPConnectionFactory
  location: class SOAPConnectionFactory_1
./Data/javax_xml_soap/javaFiles/SOAPConnectionFactory_1.java:9: error: cannot find symbol
            SOAPConnection connection = factory.createConnection();
            ^
  symbol:   class SOAPConnection
  location: class SOAPConnectionFactory_1
./Data/javax_xml_soap/javaFiles/SOAPConnectionFactory_1.java:12: error: cannot find symbol
        } catch (SOAPException e) {
                 ^
  symbol:   class SOAPException
  location: class SOAPConnectionFactory_1
7 errors


================================================================

Sample: SOAPConnectionFactory_2
----------------------------------------------------------------
output:
./Data/javax_xml_soap/javaFiles/SOAPConnectionFactory_2.java:1: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPConnection;
                     ^
./Data/javax_xml_soap/javaFiles/SOAPConnectionFactory_2.java:2: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPConnectionFactory;
                     ^
./Data/javax_xml_soap/javaFiles/SOAPConnectionFactory_2.java:3: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPException;
                     ^
./Data/javax_xml_soap/javaFiles/SOAPConnectionFactory_2.java:8: error: cannot find symbol
            SOAPConnectionFactory soapConnectionFactory = SOAPConnectionFactory.newInstance();
            ^
  symbol:   class SOAPConnectionFactory
  location: class SOAPConnectionFactory_2
./Data/javax_xml_soap/javaFiles/SOAPConnectionFactory_2.java:8: error: cannot find symbol
            SOAPConnectionFactory soapConnectionFactory = SOAPConnectionFactory.newInstance();
                                                          ^
  symbol:   variable SOAPConnectionFactory
  location: class SOAPConnectionFactory_2
./Data/javax_xml_soap/javaFiles/SOAPConnectionFactory_2.java:9: error: cannot find symbol
            SOAPConnection soapConnection = soapConnectionFactory.createConnection();
            ^
  symbol:   class SOAPConnection
  location: class SOAPConnectionFactory_2
./Data/javax_xml_soap/javaFiles/SOAPConnectionFactory_2.java:11: error: cannot find symbol
        } catch (SOAPException e) {
                 ^
  symbol:   class SOAPException
  location: class SOAPConnectionFactory_2
7 errors


================================================================

Sample: SOAPFactory_7
----------------------------------------------------------------
output:
./Data/javax_xml_soap/javaFiles/SOAPFactory_7.java:2: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPElement;
                     ^
./Data/javax_xml_soap/javaFiles/SOAPFactory_7.java:3: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPException;
                     ^
./Data/javax_xml_soap/javaFiles/SOAPFactory_7.java:4: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPFactory;
                     ^
./Data/javax_xml_soap/javaFiles/SOAPFactory_7.java:9: error: cannot find symbol
            SOAPFactory factory = SOAPFactory.newInstance();
            ^
  symbol:   class SOAPFactory
  location: class SOAPFactory_7
./Data/javax_xml_soap/javaFiles/SOAPFactory_7.java:9: error: cannot find symbol
            SOAPFactory factory = SOAPFactory.newInstance();
                                  ^
  symbol:   variable SOAPFactory
  location: class SOAPFactory_7
./Data/javax_xml_soap/javaFiles/SOAPFactory_7.java:11: error: cannot find symbol
            SOAPElement element = factory.createElement(qname);
            ^
  symbol:   class SOAPElement
  location: class SOAPFactory_7
./Data/javax_xml_soap/javaFiles/SOAPFactory_7.java:13: error: cannot find symbol
        } catch (SOAPException e) {
                 ^
  symbol:   class SOAPException
  location: class SOAPFactory_7
7 errors


================================================================

Sample: SOAPPart_2
----------------------------------------------------------------
output:
./Data/javax_xml_soap/javaFiles/SOAPPart_2.java:4: error: cannot find symbol
    public static void main(String[] args) throws SOAPException {
                                                  ^
  symbol:   class SOAPException
  location: class SOAPPart_2
./Data/javax_xml_soap/javaFiles/SOAPPart_2.java:1: error: package javax.xml.soap does not exist
import javax.xml.soap.*;
^
./Data/javax_xml_soap/javaFiles/SOAPPart_2.java:5: error: cannot find symbol
        SOAPFactory factory = SOAPFactory.newInstance();
        ^
  symbol:   class SOAPFactory
  location: class SOAPPart_2
./Data/javax_xml_soap/javaFiles/SOAPPart_2.java:5: error: cannot find symbol
        SOAPFactory factory = SOAPFactory.newInstance();
                              ^
  symbol:   variable SOAPFactory
  location: class SOAPPart_2
./Data/javax_xml_soap/javaFiles/SOAPPart_2.java:6: error: cannot find symbol
        SOAPMessage message = factory.createMessage();
        ^
  symbol:   class SOAPMessage
  location: class SOAPPart_2
./Data/javax_xml_soap/javaFiles/SOAPPart_2.java:7: error: cannot find symbol
        SOAPPart part = message.getSOAPPart();
        ^
  symbol:   class SOAPPart
  location: class SOAPPart_2
./Data/javax_xml_soap/javaFiles/SOAPPart_2.java:8: error: cannot find symbol
        SOAPEnvelope envelope = part.getEnvelope();
        ^
  symbol:   class SOAPEnvelope
  location: class SOAPPart_2
7 errors


================================================================

